Updated index file link to point to repo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>Shutterbug Injector</h1>
 
-  See the <a href="README.md">README.md</a> file for details.
+  See the <a href="https://github.com/concord-consortium/inject-shutterbug">README.md</a> file for details.
 </body>
 </html>
